# ML_report

./: .gitignore  README.md  ROADMAP.md  _quarto.yml  index.qmd  pyproject.toml
.claude/commands/: add-report.md
.github/workflows/: publish-site.yml
agentic_engineering/: loop_design_playbook.md  loop_design_playbook_demo.ipynb  loop_engineering.md  loop_engineering_demo.ipynb
autonomous_driving/: localization_tech.md
autonomous_driving/VAD/: dataloader.md  ego_trajectory.md  nuscenes_coordinate_transform.ipynb  nuscenes_dataset.md  vad_dataloader_demo.ipynb
autonomous_driving/camera_calibration/: extrinsic_calibration.md  extrinsic_calibration_demo.ipynb  extrinsic_calibration_opencv.ipynb
autonomous_driving/drive_transformer/: drive_transformer.md  drive_transformer_demo.ipynb
autonomous_driving/driving_benchmarks/: driving_benchmarks.md  navsim_hands_on.md  navsim_pdms_mechanism.ipynb  navsim_pdms_mechanism.md  run_pdm_singlestage.py
autonomous_driving/mmengine/: mmengine_demo.ipynb  mmengine_guide.md
autonomous_driving/nuplan/: nuplan_dataset.ipynb  nuplan_dataset.md
distillation/: advanced_kd_practical.ipynb  advanced_kd_practical.md  distillation_methods_survey.md  feature_distillation_why.ipynb  feature_distillation_why.md  foundation_model_distillation.md  foundation_model_distillation_demo.ipynb  knowledge_distillation.md  knowledge_distillation_demo.ipynb  multi_teacher_distillation.md  multi_teacher_distillation_demo.ipynb  self_distillation.md  self_distillation_demo.ipynb
edge_deployment/: build_int8_engine.py  check_trt_env.py  tensorrt_quantization_jetson.md  tensorrt_versioning.md
ema/: weight_ema.md  weight_ema_demo.ipynb
experiment_tracking/: experiment_tracking.md  experiment_tracking_demo.ipynb
infrastructure/: ml_training_infrastructure.md
infrastructure/examples/: README.md  container_pyxis.sbatch  multi_node.sbatch  single_node.sbatch  sweep_array.sbatch
llm/: domain_finetune_driving.ipynb  domain_finetune_driving.md  finetuning_methods_survey.ipynb  finetuning_methods_survey.md  kv_cache.md  kv_cache_demo.ipynb  lora_qlora.md  lora_qlora_demo.ipynb  lora_qlora_finetune.ipynb  qlora_gpu_smoke_kaggle.ipynb
