[project]
name = "ml-report"
version = "0.1.0"
description = "Shared environment for running ML/autonomous-driving report notebooks"
readme = "README.md"
requires-python = ">=3.10,<3.13"

# --- Core dependencies (CPU only, shared across 6 notebooks that require no GPU) ---
# Targets:
#   llm/kv_cache_demo.ipynb
#   llm/lora_qlora_demo.ipynb
#   autonomous_driving/camera_calibration/extrinsic_calibration_demo.ipynb
#   autonomous_driving/camera_calibration/extrinsic_calibration_opencv.ipynb
#   autonomous_driving/VAD/vad_dataloader_demo.ipynb
#   autonomous_driving/VAD/nuscenes_coordinate_transform.ipynb
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "scipy>=1.11",
    "opencv-python>=4.9",
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
]

[project.optional-dependencies]
# --- Dedicated to the Transformer architecture learning notebook (runs on CPU torch) ---
# Target: autonomous_driving/drive_transformer/drive_transformer_demo.ipynb
#   Minimal pure-PyTorch implementation. No GPU or bitsandbytes required, so kept separate from llm-gpu.
transformer = [
    "torch>=2.2",
]

# --- Dedicated to the GPU fine-tuning notebook (requires CUDA environment / Colab) ---
# Target: llm/lora_qlora_finetune.ipynb
#   bitsandbytes requires a CUDA GPU. It fails to import on CPU/aarch64, so it is
#   separated from the core dependencies and installed explicitly with `uv sync --extra llm-gpu`.
llm-gpu = [
    "torch>=2.2",
    "transformers>=4.44",
    "peft>=0.13",
    "trl>=0.12",
    "bitsandbytes>=0.43",
    "datasets>=2.20",
    "accelerate>=0.33",
]

[tool.uv]
# The GPU extra is heavy to resolve due to network/CUDA dependencies, so it is excluded from the default lock.
# Install individually when needed with `uv sync --extra llm-gpu`.
default-groups = []
